--- a/package.json
+++ b/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "popover-component",
+  "name": "component-popover",
   "description": "Popover component",
   "version": "1.1.0",
-  "keywords": ["popover", "component"],
-  "bugs": {
-    "url": "https://github.com/component/popover.git/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/component/popover.git"
-  },
+  "keywords": [
+    "toolpopover",
+    "popover",
+    "ui"
+  ],
   "dependencies": {
-    "tip-component": "*",
-    "component-query": "*",
-    "component-inherit": "0.0.3"
-  },
-  "component": {
-    "scripts": {
-      "popover/index.js": "index.js",
-      "popover/template.js": "template.js"
-    }
+    "component-tip": "git://github.com/npmcomponent/component-tip.git",
+    "component-query": "git://github.com/npmcomponent/component-query.git",
+    "component-inherit": "git://github.com/npmcomponent/component-inherit.git"
   }
 }
